swift/ql/test/extractor-tests/errors/Errors.ql
import swift

from Locatable e
where e instanceof ErrorElement
select e, e.getPrimaryQlClasses()
